<resources>
    <string name="app_name">Ghi số lô đề Online</string>
    <string name="loading">Loading…</string>
    <string name="x_s_mi_n_b_c_m_th_ng_h_ng_ng_y">Xổ số Miền Bắc mở thưởng hàng ngày</string>
    <string name="select_number">Chọn số</string>
    <string name="enter_number">Nhập số</string>
    <string name="quick_number_pick">Chọn số nhanh</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="t_t_c">Tất cả</string>
    <string name="t_i">Tài</string>
    <string name="x_u">Xỉu</string>
    <string name="l">Lẻ</string>
    <string name="ch_n">Chẵn</string>
    <string name="x_a">Xóa</string>
    <string name="t_l_c_c_1_n_99_5">Tỉ lệ cược 1 ăn 99.5</string>
    <string name="nh">ĐÁNH ĐỀ</string>
    <string name="how_to_play">Cách chơi:\nGiữa mỗi cược cần phân cách bởi dấu ; hoặc dấu , hoặc thanh dọc | hoặc khoảng trống\nVí dụ: 01,02,03 hoặc 01 02 03 hoặc 01;02;03 hoặc 01|02|03
    \n Xin vui lòng chọn số !</string>
    <string name="random">Ngẫu nhiên</string>
    <string name="even">Chẵn</string>
    <string name="odd">Lẻ</string>
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="_05">05</string>
    <string name="_06">06</string>
    <string name="_07">07</string>
    <string name="_08">08</string>
    <string name="_09">09</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_49">49</string>
    <string name="_50">50</string>
    <string name="_51">51</string>
    <string name="_52">52</string>
    <string name="_53">53</string>
    <string name="_54">54</string>
    <string name="_55">55</string>
    <string name="_56">56</string>
    <string name="_57">57</string>
    <string name="_58">58</string>
    <string name="_59">59</string>
    <string name="_60">60</string>
    <string name="enter_money">Nhập tiền</string>
    <string name="confirm">Xác nhận</string>
    <string name="place_a_bet">ĐẶT</string>
    <string name="reset">CÀI LẠI</string>


</resources>