<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_margin="20dp"
    android:background="@drawable/option_selector"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/option1TextView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/select_number"
        android:textColor="@color/option_text_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/option2TextView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/enter_number"
        android:textColor="@color/option_text_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/option3TextView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/quick_number_pick"
        android:textColor="@color/option_text_color"
        android:textSize="12sp" />

</LinearLayout>
