<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/nav_bar"
        layout="@layout/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_bar" />

    <FrameLayout
        android:id="@+id/frameMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_l_c_c_1_n_99_5"
            android:textAlignment="textEnd"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="205dp" />

        <TextView
            android:id="@+id/totalMoneyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-14dp"
            tools:layout_editor_absoluteY="182dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@+id/chipster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameMoney" />

    <LinearLayout
        android:id="@+id/chipster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainer">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/x1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:src="@drawable/x1"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/x3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:src="@drawable/x3"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/x5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:src="@drawable/x5"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/x10"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:src="@drawable/x10"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/moneyField"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:autofillHints=""
                android:gravity="center"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resetButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/option_selected_background_grey"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <Button
                android:id="@+id/placeBet"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/option_selected_background"
                android:text="@string/place_a_bet"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>